--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   <meta name="apple-mobile-web-app-title" content="Hello World">
   <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
+  <script src="js/geo.js"></script>
 </head>
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello World!</h1>
+    <p> Su ubicacion es: </p>
+    <p id="ubicacion"></p>
+
   </div>
   <script src="js/main.js"></script>
 </body>
