--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <script src="js/geo.js"></script>
 </head>
-<body class="fullscreen">
+<body class="fullscreen" onload="javascript:getLocation()">
   <div class="container">
     <h1 class="title">Hello World!</h1>
     <p> Su ubicacion es: </p>
