poniendo un boton

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <script src="js/geo.js"></script>
 </head>
-<body class="fullscreen" onload="javascript:getLocation()">
+<body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello World!</h1>
     <p> Su ubicacion es: </p>
@@ -24,5 +24,6 @@
 
   </div>
   <script src="js/main.js"></script>
+  <input type="button" onclick="javascript:getLocation()">
 </body>
 </html>
